welcome.lessons.welcome.array.island.Island.scala.error
island:3: error: ')' expected but '<-' found.
	while (i <- num.length-1) // Parcours entier du vecteur
                 ^island:21: error: illegal start of simple expression
}
^